<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="216dp"
        tools:layout_editor_absoluteY="151dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="36dp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textName"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textAge"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textDate"
                android:inputType="date" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <RadioGroup
                android:id="@+id/radioGroupSpeciality"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioBtnSpecialtyOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtnSpecialtyOne" />

                <RadioButton
                    android:id="@+id/radioBtnSpecialtyTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtnSpecialtyTwo" />

                <RadioButton
                    android:id="@+id/radioBtnSpecialtyThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtnSpecialtyThree" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/editTextHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textHour"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/editTextDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textDay"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/btnSend"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>